--- a/AndroidLocalDB/app/src/main/AndroidManifest.xml
+++ b/AndroidLocalDB/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         <activity android:name=".Register">
 
         </activity>
+        <activity android:name=".Welcome">
+
+        </activity>
+        <activity android:name=".ShowUser">
+
+        </activity>
     </application>
 
 </manifest>
